# Group3-Conversation-Codespace

./: .gitignore  PROJECT.md  README.md  WLOG.md  integrate_results.py  main.py  project.txt  pyproject.toml
.github/workflows/: main.yml
benchmarking/: README.md  __init__.py  cli.py  comparison.py  config.py  pipeline.py  player_eval.py  player_registry.py  reporting.py  sample_scenarios.py  scenario.py  utils.py  visualization.py
benchmarking/scripts/: run_default.py
core/: engine.py  utils.py
models/: cli.py  item.py  player.py
players/: pause_player.py  player_mapping.py  random_pause_player.py  random_player.py
players/bayesian_tree_search_player/: bst_player_presets.py  bst_player_presets_save_0914.py  bst_players.py  greedy_players.py  utils.py
players/player_0/: player.py
players/player_1/: player.py  sweep_weights_to_excel.py
players/player_10/: player.py
players/player_10_RL/: __init__.py
players/player_11/: player.py
players/player_2/: BaseStrategy.py  CoherentStrategy.py  InobservantStrategy.py  ObservantStrategy.py  Strategy_1.py  Strategy_2.py  Strategy_3.py  Strategy_4.py  player.py  process_json.py  run_simulation.sh
players/player_3/: bst_player_presets.py  player.py  (+2 more)
results/: test.txt
shells/: bench_custom_examples.sh  bench_multi_pipeline.sh  bench_player_eval.sh  bench_single_pipeline.sh  bench_sweeps.sh  run_benchmark.sh  run_benchmarking.sh  test.sh  test_pipeline_0922.sh  trivial_benchmark_template_0910.sh  trivial_test_0911.sh
ui/: base.py  game.py  gui.py  leaderboard.py  player_info.py  proposals.py  turn_display.py
(+538 files in other folders)
