[project]
name = "conversation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pygame>=2.6.1",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["E501"]

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true

[dependency-groups]
dev = [
    "ruff>=0.12.8",
]
